tests/buffer/errors/get_negative_offset.dby
import std.buffer as buf

let b = buf.new(3)
print(buf.get(b, -1))
